update fiber code